# RingRacers-master

./: .gitignore  README_ANDROID.md  local.properties
.github/workflows/: android-build.yml
.gitlab/issue_templates/: Default.md
android-project/: .gitignore  README.md  build.gradle.kts  build_log.txt  build_log_utf8.txt  download_sdl2.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
android-project/app/: build.gradle.kts
android-project/app/src/main/: AndroidManifest.xml
android-project/app/src/main/assets/gamedata/: README.md
android-project/app/src/main/cpp/: CMakeLists.txt  android_jni.cpp  android_main.cpp  config.h  touch_input.cpp
android-project/app/src/main/java/org/kartkrew/ringracers/: AssetCopier.java  RingRacersActivity.java  TouchControlsView.java
android-project/app/src/main/java/org/libsdl/app/: SDLActivity.java
android-project/app/src/main/res/values/: strings.xml  themes.xml
android-project/app/src/main/res/xml/: file_paths.xml
app/: build.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
src/: config.h  p_user.c  slope_anchors.c  strcasestr.c  t_facon.c
src/menus/: options-video-advanced.c
src/sdl/: i_video.cpp
